@@ -581,7 +581,7 @@ PANOPTICON_SITES_LBL_GROUPS = Ομάδες
 PANOPTICON_SITES_LBL_GROUPS_PLACEHOLDER = Επιλέξτε μία ή περισσότερες ομάδες (προαιρετικά)
 PANOPTICON_SITES_LBL_DLKEY_EDIT_TITLE = Επεξεργασία Κλειδιού Λήψης
 PANOPTICON_SITES_LBL_INSTRUCTIONS_BODY = Πρώτα, εγκαταστήστε το Akeeba Panopticon Connector στον ιστοχώρο σας βασισμένο σε Joomla!™. Στη συνέχεια, μεταβείτε στο διαχειριστικό τμήμα του ιστοχώρου σας και κάντε κλικ στις Εφαρμογές, Akeeba Panopticon Connector για να βρείτε τις πληροφορίες σύνδεσης. Αντιγράψτε αυτές τις πληροφορίες στα παρακάτω πεδία.
-PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_TIME_HELP = Η ώρα εκφράζεται στη ζώνη ώρας GMT. Εάν εντοπιστούν ενημερώσεις <em>μετά</em> από αυτή την ώρα της ημέρας, η εγκατάσταση της ενημερωμένης έκδοσης θα πραγματοποιηθεί την επόμενη ημερολογιακή ημέρα. Αποφύγετε τη χρήση της ώρας μέσα στην ημέρα στην οποία λαμβάνει χώρα η μετάβασης μεταξύ χειμερινής και θερινής ώρα (συνήθως: μεταξύ 2πμ και 4πμ). Διαφορετικά, ο προγραμματισμός ενημέρωσης θα ενεργήσει με τρόπο που θεωρείτε «περίεργο» ή «λάθος» εάν εντοπιστεί ενημέρωση την ημέρα της αλλαγής από/σε θερινή ώρας.
+PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_TIME_HELP = Η ώρα εκφράζεται στη ζώνη ώρας %s. Εάν εντοπιστούν ενημερώσεις <em>μετά</em> από αυτή την ώρα της ημέρας, η εγκατάσταση της ενημερωμένης έκδοσης θα πραγματοποιηθεί την επόμενη ημερολογιακή ημέρα. Αποφύγετε τη χρήση της ώρας μέσα στην ημέρα στην οποία λαμβάνει χώρα η μετάβασης μεταξύ χειμερινής και θερινής ώρα (συνήθως: μεταξύ 2πμ και 4πμ). Διαφορετικά, ο προγραμματισμός ενημέρωσης θα ενεργήσει με τρόπο που θεωρείτε «περίεργο» ή «λάθος» εάν εντοπιστεί ενημέρωση την ημέρα της αλλαγής από/σε θερινή ώρας.
 PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_EMAIL_CC_HELP = "Μια λίστα διαχωρισμένη με κόμματα επιπρόσθετων διευθύνσεων ηλεκτρονικού ταχυδρομείου που θα λάβουν επίσης (CC – Carbon Copy) τα απεσταλμένα μηνύματα ηλεκτρονικού ταχυδρομείου σχετικά με την ενημέρωση του ιστότοπου. Οι διευθύνσεις μπορούν να έχουν τη μορφή <code>foo@example.com</code> (μόνο διεύθυνση ηλεκτρονικού ταχυδρομείου) ή <code>Κος Τάδε Δεινόπουλος&lt; foo@example.com &gt; &gt;</code> (όνομα και διεύθυνση)."
 PANOPTICON_SITE_LBL_TAB_UPDATE = Ενημέρωση Joomla!™
 PANOPTICON_SITE_LBL_TAB_EXTUPDATE = Ενημέρωση Επεκτάσεων
