@@ -571,7 +571,7 @@ PANOPTICON_SITES_OPT_CONFIG_CORE_UPDATE_WHEN_TIME=Time of Day
 PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_TIME=Time Of The Day to Install Updates On (Hour:Minute)
 PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_TIME_HOUR="Hour"
 PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_TIME_MINUTES="Minutes"
-PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_TIME_HELP="The time expressed in the GMT timezone. If updates are found <em>after</em> this time of the day the update installation will take place on the next calendar day. Avoid using the Daylight Savings Time changeover time of the day (usually: between 2am and 4am); otherwise, update scheduling will act in what you perceive to be a “weird” or “wrong” way if an update is found on the day of the Daylight Savings Time changeover."
+PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_TIME_HELP="The time expressed in the %s timezone. If updates are found <em>after</em> this time of the day the update installation will take place on the next calendar day. Avoid using the Daylight Savings Time changeover time of the day (usually: between 2am and 4am); otherwise, update scheduling will act in what you perceive to be a “weird” or “wrong” way if an update is found on the day of the Daylight Savings Time changeover."
 PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_EMAIL_CC=CC the Following Email Addresses
 PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_EMAIL_CC_HELP="A comma-separated list of additional email addresses to Carbon Copy when sending emails about the site update. Addresses can be in the format <code>foo@example.com</code> (only email address) or <code>Mr. Foo Bar &lt;foo@example.com&gt;</code> (name and address)."
 PANOPTICON_SITES_FIELD_CONFIG_CORE_UPDATE_EMAIL_ERROR=Send Email after Update Failure
